--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,7 @@ letter-spacing: 0.06em;
 text-transform: uppercase;
 }
 .btn-hero{
+cursor: pointer;
 color: var(--fourth-text-cl);
 width: 216px;
 height: 50px;
@@ -130,6 +131,7 @@ color: rgba(255, 255, 255, 0.6);
 background-color: var(--third-bg-cl);
 }
 .button{
+cursor: pointer;
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
