--- a/css/styles.css
+++ b/css/styles.css
@@ -20,20 +20,23 @@
     color: var(--main-text-cl);
     background-color: var(--accent-bg-cl);
 }
-.logo link{
-    font-family: var(--second-font);
-    font-weight: 700;
-    color: var(--second-text-cl);
+.logo-link{
+font-family: 'Raleway';
+font-style: normal;
+font-weight: 700;
+font-size: 26px;
+line-height: 1.19;
+letter-spacing: 0.03em;
+color: #2196F3;
 }  
 .logo-header{
     color:#000000;
 }
 .list{
 list-style: none;   
-font-family: var(--main-font);
 font-weight: 500;
 font-size: 14px;
-line-height: 16px;
+line-height: 1.14;
 letter-spacing: 0.02em
 }
 .link {
@@ -56,35 +59,40 @@ color: currentColor;
     font-style: normal;
 font-weight: 900;
 font-size: 44px;
-line-height: 60px;
+line-height: 1.36;
 text-align: center;
 letter-spacing: 0.06em;
 text-transform: uppercase;
 }
+
+
 .btn-hero{
+font-weight: 700;
+font-size: 16px;
+line-height: 1.87; 
+display: flex;
+align-items: center;
+text-align: center;
+letter-spacing: 0.06em;  
 cursor: pointer;
 color: var(--fourth-text-cl);
 width: 216px;
 height: 50px;
 left: 692px;
 top: 430px;
-background: #2196F3;
+background:var(--third-bg-cl)
 }
 .subtitle{
-font-family: var(--main-font);
-font-style: normal;
 font-weight: 700;
 font-size: 14px;
-line-height: 16px;
+line-height: 1.14;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 }
 .subtitle-text{
-    color: var(--third-text-cl);
-    font-style: normal;
-font-weight: 400;
+color: var(--third-text-cl);
 font-size: 14px;
-line-height: 24px;
+line-height: 1.71;
 letter-spacing: 0.03em;
 }
 .team{
@@ -93,13 +101,13 @@ letter-spacing: 0.03em;
 .title-card{
 font-weight: 500;
 font-size: 16px;
-line-height: 19px;
+line-height: 1.18;
 letter-spacing: 0.03em;
 }
 .text-card {
 font-weight: 400;
 font-size: 16px;
-line-height: 19px;
+line-height: 1.18;
 letter-spacing: 0.03em;
 color: var(--third-text-cl)
 }
@@ -113,7 +121,7 @@ background-color: var(--second-bg-cl);
 font-style: normal;
 font-weight: 400;
 font-size: 14px;
-line-height: 24px;
+line-height: 1.71;
 letter-spacing: 0.03em;
 color: var(--fourth-text-cl)
 }
@@ -121,7 +129,7 @@ color: var(--fourth-text-cl)
 font-style: normal;
 font-weight: 400;
 font-size: 14px;
-line-height: 24px;
+line-height: 1.71;
 letter-spacing: 0.03em;
 color: rgba(255, 255, 255, 0.6);
 }
@@ -135,21 +143,39 @@ cursor: pointer;
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
-line-height: 26px;
+line-height: 1.62;
 text-align: center;
 letter-spacing: 0.03em;
 }
 .title-works{
-font-style: normal;
 font-weight: 700;
 font-size: 18px;
-line-height: 36px;
+line-height: 2;
 letter-spacing: 0.06em;    
 }
 .text-works{
-font-style: normal;
-font-weight: 400;
 font-size: 16px;
-line-height: 30px;
+line-height: 1.87;
 letter-spacing: 0.03em;
 }
+
+/*прихований заголовок*/
+.visually-hidden {
+    position: absolute;
+      white-space: nowrap;
+      width: 1px;
+      height: 1px;
+      overflow: hidden;
+      border: 0;
+      padding: 0;
+      clip: rect(0 0 0 0);
+      clip-path: inset(50%);
+      margin: -1px;
+  } 
+  .current{
+    color: var(--second-text-cl);
+  }
+  .address{
+font-style: normal;
+
+  }
