--- a/css/styles.css
+++ b/css/styles.css
@@ -139,8 +139,10 @@ color: rgba(255, 255, 255, 0.6);
 background-color: var(--third-bg-cl);
 }
 .button{
+    font-family: inherit;
 cursor: pointer;
-font-style: normal;
+background: #F5F4FA;
+color: var(--main-text-cl);
 font-weight: 500;
 font-size: 16px;
 line-height: 1.62;
