--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,10 @@ letter-spacing: 0.02em
 text-decoration: none;
 color: currentColor;
 }
-
+.list-link{
+    text-decoration: none;
+    color: currentColor;
+}
 .link:hover,
 .link:focus {color:var(--second-text-cl);
 }
